hphp/hack/test/typecheck/like_types/dynamic_coercion/reified_generics.php.exp
File "reified_generics.php", line 6, characters 10-22:
Invalid return type (Typing[4110])
  File "reified_generics.php", line 5, characters 21-23:
  Expected `int`
  File "reified_generics.php", line 5, characters 21-23:
  This type argument to `C` must match exactly (it is invariant)
  File "reified_generics.php", line 6, characters 16-19:
  But got `dynamic`
File "reified_generics.php", line 10, characters 10-27:
Invalid return type (Typing[4110])
  File "reified_generics.php", line 9, characters 35-37:
  Expected `int`
  File "reified_generics.php", line 9, characters 35-37:
  This type argument to `C` must match exactly (it is invariant)
  File "reified_generics.php", line 10, characters 19-22:
  But got `dynamic`
File "reified_generics.php", line 10, characters 10-27:
Invalid return type (Typing[4110])
  File "reified_generics.php", line 9, characters 35-37:
  Expected `int`
  File "reified_generics.php", line 10, characters 19-22:
  But got `dynamic`
